@@ -1,3 +1,8 @@
+2007-05-11  Brady Anderson <banderso@novell.com> 
+
+	* Banter/ChatWindow.cs: remove debug
+	* Banter/Conversation.cs: ???
+
 2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/Person.cs: ADded all of the avatar events so avatars get
